--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <meta property="og:title" content="Let's Talk - Profesjonalna szkoła językowa" />
     <meta property="og:description" content="Let's Talk - profesjonalna szkoła językowa oferująca kursy na wszystkich poziomach zaawansowania. Nowoczesne metody nauczania i wykwalifikowani lektorzy." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://letstalk.net.pl/" />
+    <meta property="og:image" content="https://letstalk.net.pl/lovable-uploads/logo.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@letsTalkSchool" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://letstalk.net.pl/lovable-uploads/logo.png" />
     
     <link rel="icon" type="image/png" href="/lovable-uploads/a4b979b9-46ce-428b-8a5a-7486bfd8d53a.png" />
   </head>
